# devkit-smoke-test

./: .envrc  .gitignore  .gitignore.project  .pre-commit-config.yaml  .pymarkdown.config.md  .typos.toml  .vig-os  .yamllint  CHANGELOG.md  README.md  SECURITY.md  flake.nix  justfile  justfile.local  justfile.project  pyproject.toml  renovate.json  zizmor.yml
.claude/: agent-models.toml  worktrees.json
.devcontainer/: .gitignore  CHANGELOG.md  README.md  devcontainer.json  docker-compose.local.yaml  docker-compose.project.yaml  docker-compose.yml  justfile.devc  justfile.gh  justfile.worktree  workspace.code-workspace.example
.devcontainer/scripts/: copy-host-user-conf.sh  init-git.sh  init-precommit.sh  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  setup-gh-repo.sh  setup-git-conf.sh  verify-auth.sh  version-check.sh
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/: CODEOWNERS  agent-blocklist.toml  label-taxonomy.toml  pull_request_template.md  renovate-default.json
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  discussion.yml  docs.yml  feature.yml  refactor.yml
.github/workflows/: ci.yml  codeql.yml  direnv-smoke.yml  prepare-release-extension.yml  prepare-release.yml  promote-release.yml  release-core.yml  release-extension.yml  release-publish.yml  release.yml  renovate-changelog-build.yml  renovate-changelog-commit.yml  renovate-changelog.yml  repository-dispatch.yml  scorecard.yml  sync-issues.yml  sync-main-to-dev.yml
docs/: COMMIT_MESSAGE_STANDARD.md  DOWNSTREAM_RELEASE.md  container-ci-quirks.md
docs/issues/: issue-1.md  issue-106.md  issue-13.md  issue-157.md  issue-16.md  issue-168.md  (+13 more)
(+316 files in other folders)
