[project]
name = "devcontainer_smoke_test"
version = "0.1.0"
description = "devcontainer_smoke_test project"
requires-python = "==3.14.6"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
  "ipykernel==7.3.0",
  "jupyter==1.1.1",
]
science = [
  "numpy==2.4.6",
  "scipy==1.17.1",
  "pandas==3.0.3",
  "matplotlib==3.11.0",
]
all = ["devcontainer_smoke_test[dev,science]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcontainer_smoke_test"]

[dependency-groups]
dev = ["hatchling==1.30.1", "rich==15.0.0"]

[tool.uv]
constraint-dependencies = [
  "notebook>=7.5.6",
  "jupyterlab>=4.5.7",
  "jupyter-server>=2.18.0",
  "mistune>=3.2.1",
]
