[project]
name = "devcontainer_smoke_test"
version = "0.1.0"
description = "devcontainer_smoke_test project"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
  "ipykernel==7.3.0",
  "jupyter==1.1.1",
]
science = [
  "numpy==2.5.1",
  "scipy==1.18.0",
  "pandas==3.0.4",
  "matplotlib==3.11.0",
]
all = ["devcontainer_smoke_test[dev,science]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcontainer_smoke_test"]

[dependency-groups]
dev = ["hatchling==1.30.1", "rich==15.0.0", "pytest==9.1.1", "pytest-cov==7.1.0"]

[tool.uv]
constraint-dependencies = [
  "notebook>=7.5.6",
  "jupyterlab>=4.5.7",
  "jupyter-server>=2.18.0",
  "mistune>=3.2.1",
]
